Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
Impala 3.1.0
-
ghx-label-8
Description
In hdfs-parquet-scanner.cc:1224 we log an invalid file version string. Whatever 4 bytes that that pointer points to will end up in the profile. These can be non-ascii characters, thus potentially breaking tools that parse the profiles and expect their content to be plain text. We should either remove the bytes from the message, or escape them as hex.